@@ -11,6 +11,14 @@ Version 2.1-35 (opened September 5, 2013)
 	further are oblique to the corresponding axis. In any case they
 	will have zero correlation to all subsequent dimensions.
 
+	* simulate.rda, simulate.cca: gained argument 'correlated' for
+	using covariances of species in generating correlated multivariate
+	normal residuals in parametric simulations. The covariances are
+	estimated from the residual ordination of species. The argument
+	defaults FALSE which implements the old parametric simulation
+	where each species is simulated independently.  The argument has
+	no effect in capscale() which stores no information on species.
+	
 Version 2.1-34 (closed September 5, 2013)
 
 	* DESCRIPTION: dependent on R >= 2.14.0.
